# fsc

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  Config.cmake.in  LICENSE  README.md  pch.hpp  vcpkg.json
catch/: CMakeLists.txt  Catch2Found.cmake  catch2_found.cmake  runner.cpp
catch/fsc/: core-types.cpp  main_compilation.cpp  print.cpp
catch/fsc/arithmetic/: addition.cpp  subtraction.cpp
catch/fsc/class/: class_creation.cpp
catch/fsc/function/: function_creation.cpp
cmake/: CompilerOptions.cmake  ProjectOptions.cmake  clang.cmake  compile-options.cmake  gcc.cmake  libraries.cmake  msvc.cmake  project-options.cmake  unix.cmake
example/: bubble_sort.fsc  fibonacci.fsc  is_triangle.fsc  return_type_deduction.fsc  simple_class.fsc  sqrt.fsc  test.fsc
fsc/: CMakeLists.txt  Fsc.g4
fsc/antlr-generated/: Fsc.interp  Fsc.tokens  FscBaseVisitor.cpp  FscBaseVisitor.h  FscLexer.cpp  FscLexer.h  FscLexer.interp  FscLexer.tokens  FscParser.cpp  FscParser.h  FscVisitor.cpp  FscVisitor.h
fsc/include/: codegen.hpp  compiler.hpp  exception.hpp  filter.hpp  function.hpp  functions.hpp  interpreter.hpp  io.hpp  stack.hpp  uuid_factory.hpp  visibility.hpp  visitor.hpp
fsc/include/ast/: analysis_report.hpp  basic_node.hpp  binary_operator.hpp  body.hpp  class.hpp  conversion.hpp  function.hpp  function_call.hpp  function_node.hpp  if.hpp  if_stmt.hpp  member_variable.hpp  method_call.hpp  node.hpp  parenthesized.hpp  program.hpp  return.hpp  value.hpp  variable.hpp  variable_definition.hpp
fsc/include/ast/container/: body.hpp  class.hpp  program.hpp
fsc/include/ast/expression/: binary_operator.hpp  conversion.hpp  parenthesized.hpp  unary_operator.hpp
fsc/include/ast/function/: function.hpp  function_call.hpp  magic_methods_table.hpp  method_call.hpp
fsc/include/ast/if/: if_stmt.hpp
fsc/include/ast/statement/: if.hpp  if_stmt.hpp  while.hpp
fsc/include/ast/value/: member_variable.hpp  value.hpp  variable.hpp  variable_definition.hpp
fsc/include/builtin/: statements.hpp  types.hpp  uuid_factory.hpp
fsc/include/converters/: bool.hpp  float.hpp  int.hpp  string.hpp
fsc/include/debug/: debug.hpp
fsc/include/function/: argument.hpp  default_function_info.hpp  from_stack_getter.hpp  function.hpp  functions_holder.hpp  signature.hpp
fsc/include/function/builtin/: binary.hpp  implement_operators.hpp  initialize_types.hpp  math.hpp  unary.hpp
fsc/include/stack/: stack.hpp
fsc/include/type/: antlr-types.hpp  builtin_types.hpp  builtin_types_impl.hpp  type.hpp  type_manager.hpp
fsc/program/: CMakeLists.txt  fsc.cpp  fscl.cpp
fsc/source/: codegen.cpp  compiler.cpp  fsc_compiler_support.cpp  function.cpp  functions.cpp  interpreter.cpp  main.cpp  stack.cpp  visibility.cpp  visitor.cpp
fsc/source/ast/: basic_node.cpp  binary_operator.cpp  body.cpp  class.cpp  conversion.cpp  function.cpp  function_call.cpp  if.cpp  if_stmt.cpp  member_variable.cpp  method_call.cpp  node.cpp  parenthesized.cpp  program.cpp  return.cpp  value.cpp  variable.cpp  variable_definition.cpp
fsc/source/ast/container/: body.cpp  class.cpp  program.cpp
fsc/source/ast/expression/: binary_operator.cpp  conversion.cpp  parenthesized.cpp
fsc/source/ast/function/: function.cpp  function_call.cpp  method_call.cpp
fsc/source/ast/function/function_details/: codegen.cpp  contruction.cpp  function.cpp  special_methods.cpp
fsc/source/ast/if/: if_stmt.cpp
fsc/source/ast/statement/: if.cpp  if_stmt.cpp  while.cpp
fsc/source/ast/value/: member_variable.cpp  value.cpp  variable.cpp  variable_definition.cpp
fsc/source/builtin/: types.cpp
fsc/source/converters/: bool.cpp  float.cpp  int.cpp  string.cpp
fsc/source/function/: argument.cpp  builtin_functions.cpp  function.cpp  functions_holder.cpp
fsc/source/stack/: stack.cpp
fsc/source/type/: builtin_types_impl.cpp  type.cpp  type_variables.cpp
fsc/source/visitor/: construct.cpp  visitor.cpp
fsc/source/visitor/construction/: containers.cpp  expression.cpp  function.cpp  function_call.cpp  program.cpp  statements.cpp  variables.cpp
